# fastapi-template

./: .env.sample  .gitattributes  .gitignore  .pre-commit-config.yaml  Makefile  README.md  main.py  pyproject.toml
.cursor/rules/: README.md  api-standards.mdc  database-models.mdc  error-handling.mdc  fastapi-patterns.mdc  project-overview.mdc  python-conventions.mdc  security-best-practices.mdc  testing-standards.mdc  workflow-guidelines.mdc
.rc/: .bandit.ini  .importlinter  .pylintrc  mypy.ini  ruff.toml
app/: appenv.py  application.py  dependencies.py  lifespan.py  server.py
app/api/: router.py
app/api/health/: __init__.py  router.py
app/api/v1/: __init__.py  router.py
app/config/: __init__.py  settings.py
app/exceptions/: __init__.py  auth_exceptions.py  base_exceptions.py
app/middlewares/: __init__.py  api_key.py  authentication.py
app/models/: __init__.py  base_model.py
app/schema/: __init__.py  api_response.py  health.py
app/utils/: __init__.py  constants.py  enums.py
app/utils/constants/: __init__.py  api.py
app/utils/enums/: __init__.py  app_env.py  base.py
docs/: architecture.md  code_quality.md  setup.md
infra/: __init__.py
infra/devops/: docker-compose.yml
infra/server/: __init__.py  gunicorn.py
libs/database/: __init__.py  alembic.ini  database_session.py
libs/logger/: __init__.py  config.py  constants.py  handler.py
make/: dev.mk  docker.mk  quality.mk
tests/: conftest.py
tests/factories/: base.py
tests/helpers/: utils.py
tests/libs/: __init__.py
tests/utils/: __init__.py  constants.py
(+16 files in other folders)
