[project]
name = "fastapi-template"
version = "0.1.0"
description = "Modern FastAPI template with async SQLAlchemy, comprehensive quality tools, and Docker"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # Core runtime dependencies (shared by all environments)
    "fastapi>=0.116.1",
    "pydantic-settings>=2.0.0",
    "uvicorn>=0.35.0",
    "httptools>=0.6.0",
    "uvloop>=0.19.0",
    "loguru>=0.7.3",
    "sqlalchemy[asyncio]>=2.0.43",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.1",
    # URL handling
    "yarl>=1.9.0",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
]

[dependency-groups]
# Local development - Everything except gunicorn (uses uvicorn directly)
local = [
    # Testing dependencies
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
    "httpx>=0.28.1",
    "factory-boy>=3.3.3",
    "faker>=37.6.0",
    # Code quality and linting
    "pre-commit>=4.3.0",
    "pylint>=3.0.0",
    "mypy>=1.0.0",
    "import-linter>=2.3.0",
    "ruff>=0.12.11",
]

# Deploy related dependencies - Gunicorn (no test/lint)
deploy = [ "gunicorn>=21.2.0" ]

# Development environment
dev = [
    { include-group = "deploy" },
    "pre-commit>=4.3.0",
    "vulture>=2.14",
]

# Production environment
prod = [{ include-group = "deploy" }]
